# fastapi-pasta

./: .gitignore  Dockerfile  README.md  auth.py  constants.py  db.py  main.py  pyproject.toml  test_api.py  validators.py
models/: base.py  db.py
services/: video.py
utils/: characteristics.py  main.py
